# LLD-C-

./: README.md
1. Factory Design Pattern/1. Simple Factory/: CMakeLists.txt  common.h  debug_logger.h  error_logger.cpp  ilogger.h  info_logger.cpp  logger_factory.cpp  logger_factory.h  main.cpp  notes.md
1. Factory Design Pattern/2. Factory Method/: CMakeLists.txt  debug_logger.cpp  debug_logger_factory.cpp  debug_logger_factory.h  error_logger.h  error_logger_factory.cpp  error_logger_factory.h  info_logger.h  info_logger_factory.cpp  info_logger_factory.h  logger_factory.h  main.cpp  notes.md
